# Coup

./: .gitignore  .pre-commit-config.yaml  LICENSE  README  README.md  action.py  aqirvprn.iwb.txt  console.py  game.py  main.py  player.py  pyproject.toml  test.py
core/: action.py  errors.py  game.py  player.py
src/pycoup/: __main__.py  console.py
src/pycoup/core/: action.py  errors.py  game.py  player.py
tests/: game_test.py  test.py
