[build-system]
requires = ["uv_build >= 0.10.10, <0.11.0"]
build-backend = "uv_build"

[project]
name = "pycoup"
version = "0.0.2"
authors = [
  { name="MrValdez", email="shunyvaldez@gmail.com" },
]
description = "The board game Coup implemented in Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/MrValdez/Coup"
Issues = "https://github.com/MrValdez/Coup/issues"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
